# TextureAtlasMaker

./: CMakeLists.txt  README.md
TextureAtlasMaker/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp
TextureGeneratorLib/: CMakeLists.txt  generator.cpp  generator.hpp
test/: CMakeLists.txt  simpletest.cpp  testgenerator.cpp
